Changed theme and added title, author, and description.

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
-theme: jekyll-theme-minimal
+theme: minima
+title: Github Pages Tutorial
+author: Andrew Madrid
+description: Github pages tutorial from online.
